--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -21,13 +21,6 @@
                 <div class="col">
                     <h2>สินค้าทั้งหมด</h2>
                 </div>
-                <div class="col-lg-4">
-                    <div class="input-group">
-                        <input class="form-control mr-sm-1" type="text" placeholder="ชื่อสินค้า / รหัสสินค้า"
-                            aria-label="Search">
-                        <span><i class="fa fa-barcode px-1 fa-2x"></i></span>
-                    </div>
-                </div>
 
                 <div class="col-lg-2 px-1">
                     <a class="btn btn-success text-light text-center text-uppercase font-weight-bold px-3 dropdown-toggle"
@@ -41,6 +34,17 @@
                         {% endfor%}
                     </div>
                 </div>
+
+                <div class="col-lg-4">
+                    <div class="input-group">
+                        <input class="form-control mr-sm-1" type="text" placeholder="ชื่อสินค้า / รหัสสินค้า"
+                            aria-label="Search">
+                            <button type="submit" class="btn btn-success"><i class="fa fa-barcode px-1 fa-1x"></i></button>
+                        <span></span>
+                    </div>
+                </div>
+
+                
             </div>
 
 
