--- a/store/templates/cartdetail.html
+++ b/store/templates/cartdetail.html
@@ -2,6 +2,6 @@
 {% block title %} Phacharamon Shop {% endblock %}
 
 {% block content %}
-    <h1>All Product</h1>
+    <h1>Cart Detail</h1>
     <p>{{total}}</p>
 {% endblock %}
