--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -1,118 +1,364 @@
-{% extends "layouts/layouts.html" %}
-{% block title %} Phacharamon POS {% endblock %}
 {% load humanize %}
-{% load static %}
-{% block style %}
-    <link rel="stylesheet" href="{% static 'CSS.css' %}">
-{% endblock %}
-{% block script %}
-    <script src="{% static 'JS.js' %}"></script>
-{% endblock %}
 
-{% block content %}
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-6 mt-3">
-            <div class=" border border-dark">
-                <h2 class="text-center">รายการสินค้า<i class="fas fa-shopping-cart px-2"></i>
-                {% if item_count > 0 %}
-                    {{item_count}}
-                {% else %}
-                  0
-                {% endif %}</h2>
-                <br>
-                <p> {{total}} </p>
-                <!--<div class="footer">
-                    1
-                </div>-->
-            </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+    body {
+    font-family: Helvetica, Arial, sans-serif;
+    background: #fafafa;
+}
+
+p {
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
+}
+
+a, a:hover, a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.navbar {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+i, span {
+    display: inline-block;
+}
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+.wrapper {
+    display: flex;
+    align-items: stretch;
+}
+
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+    background: #7386D5;
+    color: #fff;
+    transition: all 0.3s;
+}
+
+#sidebar.active {
+    min-width: 80px;
+    max-width: 80px;
+    text-align: center;
+}
+
+#sidebar.active .sidebar-header h3, #sidebar.active .CTAs {
+    display: none;
+}
+
+#sidebar.active .sidebar-header strong {
+    display: block;
+}
+
+#sidebar ul li a {
+    text-align: left;
+}
+
+#sidebar.active ul li a {
+    padding: 20px 10px;
+    text-align: center;
+    font-size: 0.85em;
+}
+
+#sidebar.active ul li a i {
+    margin-right:  0;
+    display: block;
+    font-size: 1.8em;
+    margin-bottom: 5px;
+}
+
+#sidebar.active ul ul a {
+    padding: 10px !important;
+}
+
+#sidebar.active a[aria-expanded="false"]::before, #sidebar.active a[aria-expanded="true"]::before {
+    top: auto;
+    bottom: 5px;
+    right: 50%;
+    -webkit-transform: translateX(50%);
+    -ms-transform: translateX(50%);
+    transform: translateX(50%);
+}
+
+#sidebar .sidebar-header {
+    padding: 20px;
+    /*background: #6d7fcc;*/
+}
+
+#sidebar .sidebar-header strong {
+    display: none;
+    font-size: 1.8em;
+}
+
+#sidebar ul.components {
+    padding: 20px 0;
+    border-bottom: 1px solid #47748b;
+}
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+#sidebar ul li a:hover {
+    color: #7386D5;
+    background: #fff;
+}
+#sidebar ul li a i {
+    margin-right: 10px;
+}
+
+#sidebar ul li.active > a, a[aria-expanded="true"] {
+    color: #fff;
+    background: #6d7fcc;
+}
+
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
+    /*content: '﹀';*/
+	font-family: 'fontawesome';
+    content: '\f078';
+    display: block;
+    position: absolute;
+    right: 20px;
+    font-size: 0.6em;
+}
+a[aria-expanded="true"]::before {
+    /*content: '︿';*/
+    content: '\f077';
+}
+
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #6d7fcc;
+}
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+a.download {
+    background: #fff;
+    color: #7386D5;
+}
+
+a.article, a.article:hover {
+    background: #6d7fcc !important;
+    color: #fff !important;
+}
+
+
+
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+#content {
+    padding: 20px;
+    min-height: 100vh;
+    transition: all 0.3s;
+}
+
+
+/* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
+@media (max-width: 1023px) {
+    #sidebar {
+        min-width: 80px;
+        max-width: 80px;
+        text-align: center;
+        margin-left: -80px !important ;
+    }
+    a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
+        top: auto;
+        bottom: 5px;
+        right: 50%;
+        -webkit-transform: translateX(50%);
+        -ms-transform: translateX(50%);
+        transform: translateX(50%);
+    }
+    #sidebar.active {
+        margin-left: 0 !important;
+    }
+
+    #sidebar .sidebar-header h3, #sidebar .CTAs {
+        display: none;
+    }
+
+    #sidebar .sidebar-header strong {
+        display: block;
+    }
+
+    #sidebar ul li a {
+        padding: 20px 10px;
+    }
+
+    #sidebar ul li a span {
+        font-size: 0.85em;
+    }
+    #sidebar ul li a i {
+        margin-right:  0;
+        display: block;
+    }
+
+    #sidebar ul ul a {
+        padding: 10px !important;
+    }
+
+    #sidebar ul li a i {
+        font-size: 1.3em;
+    }
+    #sidebar {
+        margin-left: 0;
+    }
+    #sidebarCollapse span {
+        display: none;
+    }
+}
+
+    </style>
+    <script>
+        $(document).ready(function()
+        {$('#sidebarCollapse').on('click',function()
+        {$('#sidebar').toggleClass('active');});});
+    </script>
+</head>
+<body>
+    <div class="wrapper">
+        <!-- Sidebar Holder -->
+        <nav id="sidebar" class="active">
+        <div class="sidebar-header">
+        <h3>Bootstrap Sidebar</h3>
+        <strong>BS</strong>
         </div>
-        <div class="col-lg-6 mt-3">
-            <div class="row">
-                <div class="col">
-                    <h2>สินค้าทั้งหมด</h2>
-                </div>
-
-                <div class="col-lg-2 px-1">
-                    <a class="btn btn-success text-light text-center text-uppercase font-weight-bold px-3 dropdown-toggle"
-                        href="" data-toggle="dropdown">หมวดหมู่สินค้า</a>
-
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="{% url 'home' %}">สินค้าทั้งหมด</a>
-                        <div class="dropdown-divider"></div>
-                        {% for category in links %}
-                        <a class="dropdown-item" href="{{category.get_url}}">{{category.name}}</a>
-                        {% endfor%}
-                    </div>
-                </div>
-
-                <div class="col-lg-4">
-                    <div class="input-group">
-                        <input class="my-input mr-sm-1" type="text" placeholder="ชื่อสินค้า / รหัสสินค้า"
-                            aria-label="Search">
-                            <button type="submit" class="btn btn-success"><i class="fa fa-barcode px-1 fa-1x"></i></button>
-                        <span></span>
-                    </div>
-                </div>
-
-                
-            </div>
-
-
-            <div class="row">
-                {% for products in product %}
-                <div class="col-lg-3 mt-5">
-                    <div class="card shadow-sm p-1  bg-white rounded ">
-                        {% if products.image %}
-                        <a href="#">
-                            <img src="{{ products.image.url }}" alt="image" class="card-img-top" height="150px" width="120px">
-                        </a>
-                        {% else %}
-                        <a href="#">
-                            <img src="{% static 'media/no-pic.jpg' %}" alt="image" class="card-img-top" height="150px">
-                        </a>
-                        {% endif %}
-                        <div class="card-body mt-1" height="100px">
-                            <h5 class="card-title text-center font-weight-bold">{{ products.name}}</h5>
-                        </div>
-
-                        <div class="card-footer">
-                            {% if products.stock <= 0 %} <h4 class="text-center text-danger font-weight-bold mb-3">
-                                สินค้าหมด</h4>
-                                {% else %}
-                                <a href="{%url 'addCart' products.id%}" class="btn btn-success btn-lg btn-block "> เลือกสินค้า </a>
-                                {% endif %}
-                        </div>
-
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-            <br>
-            <div class="footer">
-                <ul class="pagination justify-content-end">
-                    {% if product.has_previous %}
-                    <li class="page-item"><a class="page-link"
-                            href="?page=product.previous_page_number">Previous</a></li>
-                    {% endif %}
         
-                    {% for i in product.paginator.page_range %}
-                    <li class="page-item {% if product.number == i %}active{% endif %}"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
-                    {% endfor %}
+        <ul class="list-unstyled components">
+        <li class="active">
+        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">
+        <i class="fa fa-home"></i>
+        Home
+        </a>
+        <ul class="collapse list-unstyled" id="homeSubmenu">
+        <li><a href="#">Home 1</a></li>
+        <li><a href="#">Home 2</a></li>
+        <li><a href="#">Home 3</a></li>
+        </ul>
+        </li>
+        <li>
+        <a href="#">
+        <i class="fa fa-briefcase"></i>
+        About
+        </a>
+        <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">
+        <i class="fa fa-file"></i>
+        Pages
+        </a>
+        <ul class="collapse list-unstyled" id="pageSubmenu">
+        <li><a href="#">Page 1</a></li>
+        <li><a href="#">Page 2</a></li>
+        <li><a href="#">Page 3</a></li>
+        </ul>
+        </li>
+        <li>
+        <a href="#">
+        <i class="fa fa-link"></i>
+        Portfolio
+        </a>
+        </li>
+        <li>
+        <a href="#">
+        <i class="fa fa-paperclip"></i>
+        FAQ
+        </a>
+        </li>
+        <li>
+        <a href="#">
+        <i class="fa fa-send"></i>
+        Contact
+        </a>
+        </li>
+        </ul>
+        </nav>
         
-                    {% if product.has_next %}
-                    <li class="page-item"><a class="page-link" href="?page={{product.next_page_number}}">Next</a></li>
-                    {% endif %}
-                </ul>
-            </div>
-            </div>
-
-            
+        <!-- Page Content Holder -->
+        <div id="content">
         
+        <nav class="navbar navbar-default">
+        <div class="container-fluid">
+        
+        <div class="navbar-header">
+        <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
+        <i class="fa fa-bars"></i>
+        <span>Toggle Sidebar</span>
+        </button>
+        </div>
+        
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Page</a></li>
+        <li><a href="#">Page</a></li>
+        <li><a href="#">Page</a></li>
+        <li><a href="#">Page</a></li>
+        </ul>
+        </div>
+        </div>
+        </nav>
+        
+        <h2>Collapsible Sidebar Using Bootstrap 4</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        </div>
 
-    </div>
-</div>
 
-
-
-{% endblock %}
+</body>
+</html>
