--- a/store/templates/layouts/navbar.html
+++ b/store/templates/layouts/navbar.html
@@ -44,11 +44,11 @@
   
     </ul>
     <form class="form-inline ">
-      <a class="nav-link text-dark text-uppercase font-weight-bold px-3" href="#">
-        Dashboard 
+      <a class="nav-link text-dark text-uppercase font-weight-bold px-3" href="index">
+        จัดการร้านค้า
       </a>
-      <a class="nav-link text-danger text-uppercase font-weight-bold px-3" href="">
-        Sign Out <i class="fas fa-sign-out-alt"></i>
+      <a class="nav-link text-danger text-uppercase font-weight-bold px-3" href="{% url 'signOut' %}">
+        ออกจากระบบ <i class="fas fa-sign-out-alt"></i>
       </a>
     </form>
 
