--- a/store/templates/pos.html
+++ b/store/templates/pos.html
@@ -13,15 +13,16 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-6 mt-3">
+            <h2 class="text-center mt-3">รายการสินค้า <br></h2>
             <div class=" border border-dark-fluid">
-                <h2 class="text-center mt-3">รายการสินค้า <br></h2>
+                
                 <br>
                 <div class="row">
                     <div class="col ml-2">
                         <h5 class="text-left ">จำนวนสินค้า {{counter}} ชิ้น</h5>
                     </div>
                     <div class="col mr-2">
-                        <h5 class="text-right">ยอดชำระเงิน {{total | intcomma}} บาท</h5>
+                        <h5 class="text-right">ยอดชำระเงิน <strong>{{total | intcomma}} </strong>บาท</h5>
                     </div>
                 </div>
                 <br>
@@ -68,6 +69,7 @@
                     <footer>
                         <div class="dropdown-divider "></div>
                         <div align="right">
+                            <button type="button" class="btn btn-danger mb-2 ml-2">ลูกหนี้</button>
                             <button type="button" class="btn btn-success mb-2 ml-2">ชำระเงิน</button>
                             <button type="button" class="btn btn-success mb-2 mr-2">จ่ายทั้งหมด</button>
                         </div>
@@ -94,12 +96,14 @@
                 </div>
 
                 <div class="col-lg-4">
-                    <div class="input-group">
-                        <input class="my-input mr-sm-1" type="text" placeholder="ชื่อสินค้า / รหัสสินค้า"
-                            aria-label="Search">
-                            <button type="submit" class="btn btn-success"><i class="fa fa-barcode px-1 fa-1x"></i></button>
-                        <span></span>
-                    </div>
+                    <form class="form-inline ml-3" action="{% url 'search' %}", method="GET">
+                        <div class="input-group">
+                            <input class="form-control" name="title" type="text" placeholder="ชื่อสินค้า / รหัสสินค้า">
+                            <div class="input-group-append">   
+                                <button type="submit" class="btn btn-success"><i class="fa fa-barcode px-1 fa-1x"></i></button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
 
