--- a/store/templates/pos.html
+++ b/store/templates/pos.html
@@ -105,7 +105,7 @@
 
             <div class="row">
                 {% for products in product %}
-                <div class="col-lg-3 mt-3">
+                <div class="col-lg-3 mt-3" style="height: 620px;">
                     <div class="card shadow-sm p-1  bg-white rounded ">
                         {% if products.image and products.stock <= 0 %}
                         <a title="{{ products.description }}">
